--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -2,6 +2,7 @@
 name: Build Padavan
 
 on: 
+  workflow_call:
   release:
     types: [published]
   push:
@@ -45,7 +46,7 @@ jobs:
     - name: Build Firmware
       env:
         TNAME: K2P
-        KERNEL: 3.4
+        KERNEL: 4.4
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
